@@ -1,4 +1,58 @@
+/**
+ * libcap_utils - DPMI capture utilities
+ * Copyright (C) 2003-2013 (see AUTHORS)
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License
+ * as published by the Free Software Foundation; either version 2
+ * of the License, or (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+ */
+
+#ifndef CAPUTILS_VERSION_H
+#define CAPUTILS_VERSION_H
+
+#ifdef CAPUTILS_EXPORT
+#pragma GCC visibility push(default)
+#endif
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
 #define CAPUTILS_VERSION_MAJOR @VERSION_MAJOR@
 #define CAPUTILS_VERSION_MINOR @VERSION_MINOR@
 #define CAPUTILS_VERSION_MICRO @VERSION_MICRO@
 #define CAPUTILS_VERSION "@VERSION@"
+
+typedef struct {
+	int major;
+	int minor;
+	int micro;
+	int features; /* bitmask, not yet implemented */
+}	caputils_version_t;
+
+/**
+ * Get version from libcap_utils.
+ * If version is non-null it fills the struct with data.
+ * It returns a string containing the version (pointing to static memory)
+ */
+const char* caputils_version(caputils_version_t* version);
+
+#ifdef CAPUTILS_EXPORT
+#pragma GCC visibility pop
+#endif
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif /* CAPUTILS_VERSION_H */
