@@ -23,6 +23,7 @@
 
 #include "caputils/marker.h"
 #include "caputils/utils.h"
+#include "caputils/version.h"
 
 #include <stdio.h>
 #include <stdlib.h>
